--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+去看生活，去观世界；探索未知，尝试新事，分享知识。
 <!-- end custom footer snippets -->
